--- a/src/OrchardCore.Themes/AffairesExtra/wwwroot/css/affaires-extra.css
+++ b/src/OrchardCore.Themes/AffairesExtra/wwwroot/css/affaires-extra.css
@@ -754,35 +754,14 @@ body {
   border-bottom: 1px solid #dee2e6;
 }
 
-.multi-item-carousel .carousel-inner > .item {
-  transition: 500ms ease-in-out left;
+.nav-tabs .nav-link {
+  background-color: rgba(0, 0, 0, 0.5) !important;
+  color: #fff !important;
+  border-color: #dee2e6 #dee2e6 #fff !important;
 }
 
-.multi-item-carousel .carousel-inner .active.left {
-  left: -33%;
-}
-
-.multi-item-carousel .carousel-inner .active.right {
-  left: 33%;
-}
-
-.multi-item-carousel .carousel-inner .next {
-  left: 33%;
-}
-
-.multi-item-carousel .carousel-inner .prev {
-  left: -33%;
-}
-
-@media all and (transform-3d), (-webkit-transform-3d) {
-  .multi-item-carousel .carousel-inner > .item {
-    transition: 500ms ease-in-out left;
-    transition: 500ms ease-in-out all;
-    backface-visibility: visible;
-    transform: none !important;
-  }
-}
-
-.multi-item-carousel .carouse-control.left, .multi-item-carousel .carouse-control.right {
-  background-image: none;
+.nav-tabs .nav-link.active {
+  background-color: #e1150d !important;
+  color: white !important;
+  border-color: #e1150d !important;
 }
