--- a/src/OrchardCore.Themes/AffairesExtra/wwwroot/scss/affaires-extra.scss
+++ b/src/OrchardCore.Themes/AffairesExtra/wwwroot/scss/affaires-extra.scss
@@ -21,7 +21,7 @@
     background: -webkit-linear-gradient(top, #e1160d 0%, #7a0b07 100%);
     background: linear-gradient(to bottom, #e1160d 0%, #7a0b07 100%);
 
-    .container{
+    .container {
         padding: 40px 0;
     }
 }
@@ -51,4 +51,18 @@ body {
     padding: .75rem 0;
     border-top: 0;
     border-bottom: 1px solid #dee2e6;
+}
+
+.nav-tabs {
+    .nav-link {
+        background-color: rgba(0,0,0, 0.5) !important;
+        color: #fff !important;
+        border-color: #dee2e6 #dee2e6 #fff !important;
+
+        &.active {
+            background-color: #e1150d !important;
+            color: white !important;
+            border-color: #e1150d !important;
+        }
+    }
 }
