Adding admin content types summary admin views.
fix frontend theme

--- a/src/OrchardCore.Modules/OrchardCore.Contents/Views/Admin/List.cshtml
+++ b/src/OrchardCore.Modules/OrchardCore.Contents/Views/Admin/List.cshtml
@@ -69,7 +69,7 @@ new SelectListItem() { Text = T["title"].Value, Value = ContentsOrder.Title.ToSt
                     @foreach (var option in Model.Options.FilterOptions)
                     {
                         string isSelected = option.Key == Model.Options.SelectedFilter ? "selected='selected'" : string.Empty;
-                        <!option @isSelected value="@option.Key">@option.Value</!option>
+                        <!option @isSelected value="@option.Key">@T[option.Value]</!option>
                     }
                 </select>
             </div>
