--- a/src/OrchardCore.Themes/AffairesExtra/Views/Layout.liquid
+++ b/src/OrchardCore.Themes/AffairesExtra/Views/Layout.liquid
@@ -7,25 +7,45 @@
     <title>{% page_title Site.SiteName %}</title>
     {% resources type: "Meta" %}
 
-    <!-- javascript -->
-
-    {% script name:"bootstrap-bundle", use_cdn:"true", version:"4", at:"Foot" %}
-    {% script source:"/AffairesExtra/vendor/jquery-easing/jquery.easing.min.js", debug_src:"/TheAgencyTheme/vendor/jquery-easing/jquery.easing.js", at:"Foot" %}
-    {% script source:"/AffairesExtra/vendor/OwlCarousel2-2.3.4/dist/owl.carousel.min.js", debug_src:"/AffairesExtra/vendor/OwlCarousel2-2.3.4/dist/owl.carousel.js", at:"Foot" %}
-    {% script source:"https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/js/ion.rangeSlider.min.js", at:"Foot" %}
-    {% script source:"/AffairesExtra/js/agency.min.js", debug_src:"/AffairesExtra/js/agency.js", at:"Foot" %}  
-    {% resources type: "HeadScript" %}
-
-    <!-- CSS -->
+    <!-- Bootstrap core CSS -->
+    {% style name:"bootstrap", use_cdn:"true", version:"4" %}
 
     <!-- Custom fonts for this template -->
+    {% style name:"font-awesome", version:"5" %}
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+    <!-- Custom styles for this template -->
+    {% style src:"/AffairesExtra/css/bootstrap-grid-ext.min.css", debug_src:"/AffairesExtra/css/bootstrap-grid-ext.css" %}
+    {% style src:"/AffairesExtra/css/affaires-extra.min.css", debug_src:"/AffairesExtra/css/affaires-extra.css" %}
+    <link rel="stylesheet" href="/AffairesExtra/vendor/OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="/AffairesExtra/vendor/OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css">
+
     <!--Plugin CSS file with desired skin-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/css/ion.rangeSlider.min.css"/>
-    
+
+    <!-- Bootstrap core JavaScript -->
+    {% script src:"/AffairesExtra/vendor/jquery/jquery.min.js", debug_src:"/AffairesExtra/vendor/jquery/jquery.js", at:"Foot" %}
+    {% script name:"bootstrap-bundle", use_cdn:"true", version:"4", at:"Foot" %}
+
+    <!-- Plugin JavaScript -->
+    {% script src:"/AffairesExtra/vendor/jquery-easing/jquery.easing.min.js", debug_src:"/AffairesExtra/vendor/jquery-easing/jquery.easing.js", at:"Foot" %}
+    {% script src:"/AffairesExtra/vendor/OwlCarousel2-2.3.4/dist/owl.carousel.min.js", debug_src:"/AffairesExtra/vendor/OwlCarousel2-2.3.4/dist/owl.carousel.js", at:"Foot" %}
+    {% script src:"https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/js/ion.rangeSlider.min.js", at:"Foot" %}
+
+    <!-- Custom scripts for this template -->
+    {% script src:"/AffairesExtra/js/agency.min.js", debug_src:"/AffairesExtra/js/agency.min.js", at:"Foot" %}
+
+    {% resources type: "HeadScript" %}
+    {% resources type: "HeadLink" %}
+    {% resources type: "Stylesheet" %}
+
+</head>
+<head>
+
+
 
 
     {% style name:"bootstrap", use_cdn:"true", version:"4" %}
