--- a/src/OrchardCore.Themes/AffairesExtra/Views/Content-FarmMachineryCategory.liquid
+++ b/src/OrchardCore.Themes/AffairesExtra/Views/Content-FarmMachineryCategory.liquid
@@ -87,20 +87,22 @@
 {% endif %}
 
 {% assign query_from = "0" %}
-{% if Request.Form.from != null %}
-  {% assign query_from = Request.Form.from %}
+{% if Request.Form.page != null %}
+  {% assign query_from = Request.Form.page | int32 %}
 {% endif %}
-{% if Request.Query.from != null %}
-  {% assign query_from = Request.Query.from %}
+{% if Request.Query.page != null %}
+  {% assign query_from = Request.Query.page | int32 %}
 {% endif %}
 
 
 
 
 <!-- ANNONCES -->
+{% assign searchFarmMachineries = Queries.FarmMachinerySearch | query: size: 1000000, from: query_from, condition: query_condition, region: query_region, category: query_category, type: query_type, model: query_model, advertiser: query_advertiser, brand: query_brand, pricefrom: query_price_from, priceto: query_price_to, year: query_year %}
+{% assign totalRecords = searchFarmMachineries.size %}
 {% assign searchFarmMachineries = Queries.FarmMachinerySearch | query: size: query_size, from: query_from, condition: query_condition, region: query_region, category: query_category, type: query_type, model: query_model, advertiser: query_advertiser, brand: query_brand, pricefrom: query_price_from, priceto: query_price_to, year: query_year %}
-{% assign count = searchFarmMachineries | size %}
-{%if count > 0 %}
+
+{%if searchFarmMachineries.size > 0 %}
   <section>
   	<form action="/equipements-agricole" method="post" >
       {% antiforgerytoken %}
@@ -166,43 +168,14 @@
                 </select>
               </div>
               <div class="col-sm-3">
-                <label for="region">{{ "Region" | t }}</label>
-                <select id="region" class="form-control" name="region">
-                  <option value="*" selected>{{ "Choose..." | t }}</option>
-                  <option value="1">Abitibi-Témiscamingue</option>
-                  <option value="2">Alberta</option>
-                  <option value="3">Bas-Saint-Laurent</option>
-                  <option value="4">Capitale-Nationale</option>
-                  <option value="5">Centre-du-Québec</option>
-                  <option value="6">Chaudière-Appalaches</option>
-                  <option value="7">Colombie-Britannique</option>
-                  <option value="8">Côte-Nord</option>
-                  <option value="9">Estrie</option>
-                  <option value="10">États-Unis</option>
-                  <option value="11">Europe</option>
-                  <option value="12">Gaspésie-Îles-de-la-Madeleine</option>
-                  <option value="13">Île-du-Prince-Édouard</option>
-                  <option value="14">Lanaudière</option>
-                  <option value="15">Laurentides</option>
-                  <option value="16">Laval</option>
-                  <option value="17">Manitoba</option>
-                  <option value="18">Maritimes</option>
-                  <option value="19">Mauricie</option>
-                  <option value="20">Montérégie</option>
-                  <option value="21">Montréal</option>
-                  <option value="22">Mauricie</option>
-                  <option value="23">Nord-du-Québec</option>
-                  <option value="24">Nouveau-Brunswick</option>
-                  <option value="25">Nouvelle-Écosse</option>
-                  <option value="26">Nunavut</option>
-                  <option value="27">Ontario</option>
-                  <option value="28">Outaouais</option>
-                  <option value="29">Saguenay–Lac-Saint-Jean</option>
-                  <option value="30">Saskatchewan</option>
-                  <option value="31">Terre-Neuve-et-Labrador</option>
-                  <option value="32">Territoires du Nord-Ouest</option>
-                  <option value="33">Yukon</option>
-                </select>
+                                {% assign regions = Queries.AllRegions | query %}
+                                <label for="region">{{ "Region" | t }}</label>
+                                <select id="region" class="form-control" name="region">
+                                    <option value="*" selected="">{{ "Choose..." | t }}</option>
+                                    {% for item in regions %}
+                                    <option value="{{ item.ContentItemId }}">{{ item | display_text }}</option>
+                                    {% endfor %}
+                                </select>
               </div>
               <div class="col-sm-3">
                 {% assign advertisers = Queries.Advertisers | query %}
@@ -311,6 +284,47 @@
             </div>
           {% endfor %}
         </div>
+        <nav class="mt-5">
+            <ul class="pagination justify-content-center">
+                {% assign totalPages = totalRecords | divided_by: 9 %}
+                {% assign testTotal = totalPages | times: 9 %}
+                {% if testTotal < totalRecords %}
+                {% assign totalPages = totalPages | plus: 1 %}
+                {% endif %}
+                {% if Request.Query.Page != null %}
+                {% assign startPage = Request.Query.Page | int32 %}
+                {% assign currentPage = Request.Query.Page | int32 %}
+                {% else %}
+                {% assign startPage = 1 %}
+                {% endif %}
+
+                {% assign endPage = startPage | plus: 2 %}
+                {% if endPage > totalPages %}
+                {% assign endPage = totalPages %}
+                {% assign startPage = totalPages | minus: 2 %}
+                {% endif %}
+
+                {% if startPage <= 1 %}
+                <li class="page-item disabled">
+                {% else %}
+                <li class="page-item">
+                {% endif %}
+                    <a class="page-link" href="?page={{currentPage | minus: 1}}" tabindex="-1">{{ "Previous" | t }}</a>
+                </li>
+                {% for i in (startPage..endPage) %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{i}}">{{i}}</a>
+                </li>
+                {% endfor %}
+                {% if endPage >= totalPages %}
+                <li class="page-item disabled">
+                {% else %}
+                <li class="page-item">
+                {% endif %}
+                    <a class="page-link" href="?page={{currentPage | plus: 1}}">{{ "Next" | t }}</a>
+                </li>
+            </ul>
+        </nav>
       </div>
     </form>
   </section>
