fix image importation

--- a/src/OrchardCore.Modules/AffairesExtra.Migration/Views/Admin/Index.cshtml
+++ b/src/OrchardCore.Modules/AffairesExtra.Migration/Views/Admin/Index.cshtml
@@ -18,6 +18,10 @@
     <input type="submit" value="Import Farm Machinery Accessory" />
 </form>
 <br />
+<form asp-action="CleanOtherEquipement" method="post" enctype="multipart/form-data">
+    <input type="submit" value="Clean Other Equipment" />
+</form>
+<br />
 <form asp-action="ImportOtherEquipement" method="post" enctype="multipart/form-data">
     <input type="submit" value="Import Other Equipment 2" />
     <input type="hidden" value="2" name="id" />
