fix build for Azure

--- a/src/OrchardCore.Themes/AffairesExtra/Views/Layout.liquid
+++ b/src/OrchardCore.Themes/AffairesExtra/Views/Layout.liquid
@@ -8,7 +8,7 @@
     {% resources type: "Meta" %}
 
     <!-- Bootstrap core CSS -->
-    {% style name:"bootstrap", use_cdn:"true", version:"4" %}
+    {% style src:"/AffairesExtra/vendor/bootstrap/css/bootstrap.min.css", debug_src:"/AffairesExtra/vendor/bootstrap/css/bootstrap.css" %}
 
     <!-- Custom fonts for this template -->
     {% style name:"font-awesome", version:"5" %}
